--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POO Y Typescript</title>
 
-    <script type="text/javascript" src="JS/01-clase-json.js"></script>
+    <script type="text/javascript" src="JS/02-hola-mundo-Typescript.js"></script>    <!-- Cargar archivos JS-->
 
 </head>
 
