04-funciones.ts: Completo y compilado a JS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POO Y Typescript</title>
 
-    <script type="text/javascript" src="JS/03-tipos-datos-TS.js"></script>    <!-- Cargar archivos JS-->
+    <script type="text/javascript" src="JS/04-funciones.js"></script>    <!-- Cargar archivos JS-->
 
 </head>
 
